# cpp-ip-anonymizer

./: .gitignore  .gitmodules  README.md  docker-compose.yml
ip-anonymizer/: CMakeLists.txt  Dockerfile
ip-anonymizer/include/: ClickHouseClientFactory.hpp  ColumnBuffer.hpp  ColumnConfiguration.hpp  Getters.hpp  IPAnonymizer.hpp  http_log.capnp.h
ip-anonymizer/src/: ClickHouseClientFactory.cpp  ColumnConfiguration.cpp  IPAnonymizer.cpp  main.cpp
